--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 twilio==5.7.0
-pyodbc==4.0.3
 requests>=2.10.0
 azure==1.0.3
 azure-storage==0.34.0
 cryptography==1.7.2
 raven>=6.0.0
 SpeechRecognition>=3.6.0
-dateutil>=2.6.0
 uszipcode>=0.1.3
 google-api-python-client>=1.6.2
+python-dateutil>=2.6.0
+flask
+flask_admin
+flask_basicauth
