--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-twilio==5.7.0
-requests>=2.10.0
-azure==1.0.3
-azure-storage==0.34.0
-cryptography==1.7.2
+twilio>=5.7.0
+requests>=2.20.0
+azure
+azure-storage
+cryptography==2.2.1
 raven>=6.0.0
 SpeechRecognition>=3.6.0
 uszipcode>=0.1.3
@@ -11,3 +11,6 @@ python-dateutil>=2.6.0
 flask
 flask_admin
 flask_basicauth
+azure-storage-blob
+azure-cosmos
+azure-cosmosdb-table
